--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-edit-text": "^5.0.2",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.7",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
