--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-edit-text": "^5.0.2",
+    "react-pdf": "^5.7.2",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.7",
     "uniqid": "^5.4.0",
